--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -6,19 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>D3 in 5 Days</title>
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
     body {
       padding: 0;
       margin: 0;
       font-family: 'Open Sans', sans-serif;
-    }
-
-    h1 {
-      font-size: 5rem;
-      color: white;
-      text-transform: uppercase;
-      margin: 0;
     }
 
     h2 {
@@ -48,6 +42,7 @@
 
     input[type="email"] {
       flex: 1.25;
+      max-width: 500px;
       margin-right: 0.3rem;
       height: 2rem;
       padding: 0.35rem 0.5rem 0.5rem 0.5rem;
@@ -57,18 +52,11 @@
     }
 
     input[type="submit"] {
-      background-image: linear-gradient(to bottom,#5cb85c 0,#419641 100%);
+      background-image: linear-gradient(to bottom, #5cb85c 0, #419641 100%);
       background-repeat: repeat-x;
       border-color: #3e8f3e;
-      margin: 5px;
-      text-shadow: 0 -1px 0 rgba(0,0,0,.2);
-      box-shadow: inset 0 1px 0 rgba(255,255,255,.15), 0 1px 1px rgba(0,0,0,.075);
-      padding: 0.35rem 1rem 0.5rem 1rem;
-      font-size: 1.5rem;
-      border-radius: 6px;
       color: #fff;
       background-color: #5cb85c;
-      border: 1px solid transparent;
     }
 
     .disclaimer {
@@ -80,18 +68,344 @@
       color: gray;
     }
   </style>
+  <style>
+    .cover {
+      background-size: cover !important;
+    }
+
+    .dt {
+      display: table;
+    }
+
+    .dtc {
+      display: table-cell;
+    }
+
+    .i {
+      font-style: italic;
+    }
+
+    .fs-normal {
+      font-style: normal;
+    }
+
+    .fw1 {
+      font-weight: 100;
+    }
+
+    .vh-100 {
+      height: 100vh;
+    }
+
+    .tracked {
+      letter-spacing: .1em;
+    }
+
+    .lh-title {
+      line-height: 1.25;
+    }
+
+    .lh-copy {
+      line-height: 1.5;
+    }
+
+    .w-100 {
+      width: 100%;
+    }
+
+    .white-70 {
+      color: rgba(255, 255, 255, .7);
+    }
+
+    .white-60 {
+      color: rgba(255, 255, 255, .6);
+    }
+
+    .white {
+      color: #fff;
+    }
+
+    .bg-dark-gray {
+      background-color: #333;
+    }
+
+    .pv5 {
+      padding-top: 4rem;
+      padding-bottom: 4rem;
+    }
+
+    .ph0 {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .ph2 {
+      padding-left: .5rem;
+      padding-right: .5rem;
+    }
+
+    .mb2 {
+      margin-bottom: .5rem;
+    }
+
+    .mh0 {
+      margin-left: 0;
+      margin-right: 0;
+    }
+
+    .tc {
+      text-align: center;
+    }
+
+    .ttu {
+      text-transform: uppercase;
+    }
+
+    .f1 {
+      font-size: 3rem;
+    }
+
+    .f4 {
+      font-size: 1.25rem;
+    }
+
+    .f5 {
+      font-size: 1rem;
+    }
+
+    .f6 {
+      font-size: .875rem;
+    }
+
+    .measure {
+      max-width: 30em;
+    }
+
+    .measure-wide {
+      max-width: 34em;
+    }
+
+    .center {
+      margin-right: auto;
+      margin-left: auto;
+    }
+
+    .v-mid {
+      vertical-align: middle;
+    }
+
+    @media screen and (min-width: 60em) {
+      .f-headline-l {
+        font-size: 6rem;
+      }
+    }
+
+    .ba {
+      border-style: solid;
+      border-width: 1px;
+    }
+
+    .bn {
+      border-style: none;
+      border-width: 0;
+    }
+
+    .b--black-10 {
+      border-color: rgba(0, 0, 0, .1);
+    }
+
+    .cf:before,
+    .cf:after {
+      content: " ";
+      display: table;
+    }
+
+    .cf:after {
+      clear: both;
+    }
+
+    .cf {
+      *zoom: 1;
+    }
+
+    .fl {
+      float: left;
+      _display: inline;
+    }
+
+    .input-reset {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+    }
+
+    .button-reset::-moz-focus-inner,
+    .input-reset::-moz-focus-inner {
+      border: 0;
+      padding: 0;
+    }
+
+    .lh-solid {
+      line-height: 1;
+    }
+
+    .mw7 {
+      max-width: 48rem;
+    }
+
+    .w-100 {
+      width: 100%;
+    }
+
+    .black-80 {
+      color: rgba(0, 0, 0, .8);
+    }
+
+    .white {
+      color: #fff;
+    }
+
+    .bg-black-70 {
+      background-color: rgba(0, 0, 0, .7);
+    }
+
+    .bg-white {
+      background-color: #fff;
+    }
+
+    .hover-bg-black:hover {
+      background-color: #000;
+    }
+
+    .hover-bg-black:focus {
+      background-color: #000;
+    }
+
+    .pa0 {
+      padding: 0;
+    }
+
+    .pa3 {
+      padding: 1rem;
+    }
+
+    .pa4 {
+      padding: 2rem;
+    }
+
+    .pv3 {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
+
+    .ma0 {
+      margin: 0;
+    }
+
+    .mb3 {
+      margin-bottom: 1rem;
+    }
+
+    .tc {
+      text-align: center;
+    }
+
+    .f5 {
+      font-size: 1rem;
+    }
+
+    .f6 {
+      font-size: .875rem;
+    }
+
+    .center {
+      margin-right: auto;
+      margin-left: auto;
+    }
+
+    .clip {
+      position: fixed !important;
+      _position: absolute !important;
+      clip: rect(1px 1px 1px 1px);
+      clip: rect(1px, 1px, 1px, 1px);
+    }
+
+    .pointer:hover {
+      cursor: pointer;
+    }
+
+    .bg-animate,
+    .bg-animate:hover,
+    .bg-animate:focus {
+      transition: background-color .15s ease-in-out;
+    }
+
+    @media screen and (min-width: 30em) {
+      .br2-ns {
+        border-radius: .25rem;
+      }
+
+      .br--right-ns {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+
+      .br--left-ns {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+
+      .f4-ns {
+        font-size: 1.25rem;
+      }
+    }
+
+    @media screen and (min-width: 30em) and (max-width: 60em) {
+      .w-25-m {
+        width: 25%;
+      }
+
+      .w-75-m {
+        width: 75%;
+      }
+    }
+
+    @media screen and (min-width: 60em) {
+      .w-20-l {
+        width: 20%;
+      }
+
+      .w-80-l {
+        width: 80%;
+      }
+
+      .pa4-l {
+        padding: 2rem;
+      }
+
+      .f5-l {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
-  <div class="landing">
-    <h1>Learn D3.js in 5 Days</h1>
-    <h2>Daily lessons delivered straight to your inbox</h2>
-    <form action="https://www.getdrip.com/forms/64356965/submissions" method="post" data-drip-embedded-form="64356965">
-      <input placeholder="smarty@pants.com" type="email" id="drip-email" name="fields[email]" value="" />
-      <input type="submit" name="submit" value="Send Me Free Lessons!" data-drip-attribute="sign-up-button" />
-    </form>
-    <div class="disclaimer">
-      No spam, EVER. Unsubscribe any time.
+  <div class="vh-100 dt w-100 tc bg-dark-gray white cover" style="background:url(bg.jpg) no-repeat center;">
+    <div class="dtc v-mid">
+      <h1 class="f1 f-headline-l fw1 white ma0 ttu">Learn D3.js in 5 Days</h1>
+      <h2 class="f3 fw1 white-80">Daily lessons delivered straight to your inbox</h2>
+      <div class="pa4-l">
+        <form class="w-100 center pa4">
+          <fieldset class="cf bn ma0 pa0">
+            <div class="mw6 center">
+              <input class="f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-70-l w-100 br2" placeholder="Your Email Address"
+                type="text" name="email-address" value="" id="email-address">
+              <input class="f6 mv2 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-30-l w-100 br2"
+                type="submit" value="Send Me Free Lessons!">
+            </div>
+          </fieldset>
+        </form>
+      </div>
     </div>
   </div>
 </body>
