Make the form work

--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -395,11 +395,11 @@
       <h1 class="f1 f-headline-l fw1 white ma0 ttu">Learn D3.js in 5 Days</h1>
       <h2 class="f3 fw1 white-80">Daily lessons delivered straight to your inbox</h2>
       <div class="pa4-l">
-        <form class="w-100 center pa4">
+        <form class="w-100 center pa4" action="https://www.getdrip.com/forms/64356965/submissions" method="post" data-drip-embedded-form="64356965">
           <fieldset class="cf bn ma0 pa0">
             <div class="mw6 center">
               <input class="f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-70-l w-100 br2" placeholder="Your Email Address"
-                type="text" name="email-address" value="" id="email-address">
+                type="text" name="fields[email]" value="" id="email-address">
               <input class="f6 mv2 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-30-l w-100 br2"
                 type="submit" value="Send Me Free Lessons!">
             </div>
