--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -390,11 +390,11 @@
 </head>
 
 <body>
-  <div class="vh-100 dt w-100 tc bg-dark-gray white cover" style="background:url(bg.jpg) no-repeat center;">
+  <div class="vh-50 vh-75-ns dt w-100 tc bg-dark-gray white cover" style="background:url(bg.jpg) no-repeat center;">
     <div class="dtc v-mid">
-      <h1 class="f1 f-headline-l fw1 white ma0 ttu">Learn D3.js in 5 Days</h1>
+      <h1 class="f1 f-headline-l fw1 white ma0 ttu pt3 pt0-ns">Learn D3.js in 5 Days</h1>
       <h2 class="f3 fw1 white-80">Daily lessons delivered straight to your inbox</h2>
-      <div class="pa4-l">
+      <div class="pa4-ns">
         <form class="w-100 center pa4" action="https://www.getdrip.com/forms/64356965/submissions" method="post" data-drip-embedded-form="64356965">
           <fieldset class="cf bn ma0 pa0">
             <div class="mw6 center">
@@ -405,6 +405,30 @@
             </div>
           </fieldset>
         </form>
+      </div>
+    </div>
+  </div>
+  <div class="center measure-wide f5 lh-copy ph4 ph0-ns">
+    <h1 class="lh-title pb3">What subscribers are saying</h1>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/andrew.jpg" width="120" height="120" class="fl-ns pr3 pb2 br-100" />
+      <div>
+        <blockquote class="ma0 i dark-gray">I really enjoyed this course. Each day’s email was just the right amount of content and the conversational format with inline examples is great.</blockquote>
+        <p>— <a href="https://www.linkedin.com/in/andrewgscheidle/" class="dark-blue link underline hover-bg-lightest-blue">Andrew Gscheidle</a></p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/will.png" width="120" height="120" class="fl-ns pr3 pb2 br-100" />
+      <div>
+        <blockquote class="ma0 i dark-gray">I've messed around with D3 in the past, and this is the first time it's really &quot;clicked&quot;. The emails teed up the next day's content and had me looking forward to it.</blockquote>
+        <p>— <a href="http://willbutton.co/" class="dark-blue link underline hover-bg-lightest-blue">Will Button</a></p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/jonathan.jpg" width="120" height="120" class="fl-ns pr3 pb2 br-100" />
+      <div>
+        <blockquote class="ma0 i dark-gray">Ben's five-day D3 email course is so clear and well-written that I accidentally learned D3 just from proof reading it for him. Now I'm looking for places to use it in my own work!</blockquote>
+        <p>— <a href="http://expensiveproblem.com" class="dark-blue link underline hover-bg-lightest-blue">Jonathan Stark</a></p>
       </div>
     </div>
   </div>
