No spam message, minor layout tweaks

--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -395,7 +395,7 @@
       <h1 class="f1 f-headline-l fw1 white ma0 ttu pt3 pt0-ns">Learn D3.js in 5 Days</h1>
       <h2 class="f3 fw1 white-80">Daily lessons delivered straight to your inbox</h2>
       <div class="pa4-ns">
-        <form class="w-100 center pa4" action="https://www.getdrip.com/forms/64356965/submissions" method="post" data-drip-embedded-form="64356965">
+        <form class="w-100 center" action="https://www.getdrip.com/forms/64356965/submissions" method="post" data-drip-embedded-form="64356965">
           <fieldset class="cf bn ma0 pa0">
             <div class="mw6 center">
               <input class="f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-70-l w-100 br2" placeholder="Your Email Address"
@@ -405,34 +405,35 @@
             </div>
           </fieldset>
         </form>
+        <span class="f6 white-40">No spam, just content.</span>
       </div>
     </div>
   </div>
   <div class="center measure-wide f5 lh-copy ph4 ph0-ns">
     <h1 class="lh-title tc pv3">What subscribers are saying</h1>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/andrew.jpg" width="120" height="120" class="fl-ns br-100" />
+      <img src="headshots/andrew.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">I really enjoyed this course. Each day’s email was just the right amount of content and the conversational format with inline examples is great.</blockquote>
         <p>— <a href="https://www.linkedin.com/in/andrewgscheidle/" class="dark-blue link underline hover-bg-lightest-blue">Andrew Gscheidle</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/will.png" width="120" height="120" class="fl-ns br-100" />
+      <img src="headshots/will.png" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">I've messed around with D3 in the past, and this is the first time it's really &quot;clicked&quot;. The emails teed up the next day's content and had me looking forward to it.</blockquote>
         <p>— <a href="http://willbutton.co/" class="dark-blue link underline hover-bg-lightest-blue">Will Button</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/jonathan.jpg" width="120" height="120" class="fl-ns br-100" />
+      <img src="headshots/jonathan.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's five-day D3 email course is so clear and well-written that I accidentally learned D3 just from proof reading it for him. Now I'm looking for places to use it in my own work!</blockquote>
         <p>— <a href="http://expensiveproblem.com" class="dark-blue link underline hover-bg-lightest-blue">Jonathan Stark</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/taylor.jpg" width="120" height="120" class="fl-ns br-100" />
+      <img src="headshots/taylor.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's mini-course provides a great foundation for data viz. I'm not afraid of D3 anymore!</blockquote>
         <p>— Taylor Bell</p>
@@ -442,7 +443,7 @@
   <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-ns">
     <h1 class="lh-title tc mb0">Who's responsible for this?</h1>
     <div class="flex flex-column items-center pv2 f4-ns">
-      <img src="headshots/ben.jpg" width="150" height="150" class="mv3 br-100" />
+      <img src="headshots/ben.jpg" width="120" height="120" class="mv3 br-100" />
       <div class="pb5">
         <blockquote class="ma0 dark-gray">Ben Clinkinbeard is a web developer with nearly two decades of experience focused on D3, React, Node, and ES6+. In addition to professional consulting, Ben shares his knowledge through <a href="https://benclinkinbeard.com/" class="dark-blue link underline hover-bg-lightest-blue">blogging</a>, conference presentations, and video tutorials. As of August 2017, subscribers on <a href="https://egghead.io/instructors/ben-clinkinbeard" class="dark-blue link underline hover-bg-lightest-blue">egghead.io</a> have spent <strong class="fw6"><em>more than 12,700 HOURS</em></strong> watching and learning from his content.</blockquote>
       </div>
