--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -445,7 +445,8 @@
     <div class="flex flex-column items-center pv2 f4-ns">
       <img src="headshots/ben.jpg" width="120" height="120" class="mv3 br-100" />
       <div class="pb5">
-        <blockquote class="ma0 dark-gray">Ben Clinkinbeard is a web developer with nearly two decades of experience focused on D3, React, Node, and ES6+. In addition to professional consulting, Ben shares his knowledge through <a href="https://benclinkinbeard.com/" class="dark-blue link underline hover-bg-lightest-blue">blogging</a>, conference presentations, and video tutorials. As of August 2017, subscribers on <a href="https://egghead.io/instructors/ben-clinkinbeard" class="dark-blue link underline hover-bg-lightest-blue">egghead.io</a> have spent <strong class="fw6"><em>more than 12,700 HOURS</em></strong> watching and learning from his content.</blockquote>
+        <p>Ben Clinkinbeard is a web developer with nearly two decades of experience focused on D3, React, Node, and ES6+. In addition to professional consulting, Ben shares his knowledge through <a href="https://benclinkinbeard.com/" class="dark-blue link underline hover-bg-lightest-blue">blogging</a>, conference presentations, and <a href="https://egghead.io/instructors/ben-clinkinbeard" class="dark-blue link underline hover-bg-lightest-blue">video tutorials</a>.</p>
+        <p>To date, <span class="bg-lightest-blue">more than 12,700 HOURS</span> have been spent watching his lessons.</p>
       </div>
     </div>
   </div>
