Add Andy, update images

--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -419,7 +419,7 @@
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/will.png" width="120" height="120" class="fl-ns br-100 mb2" />
+      <img src="headshots/will.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">I've messed around with D3 in the past, and this is the first time it's really &quot;clicked&quot;. The emails teed up the next day's content and had me looking forward to it.</blockquote>
         <p>— <a href="http://willbutton.co/" class="dark-blue link underline hover-bg-lightest-blue">Will Button</a></p>
@@ -437,6 +437,13 @@
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's mini-course provides a great foundation for data viz. I'm not afraid of D3 anymore!</blockquote>
         <p>— Taylor Bell</p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/vanslaars.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">Learning D3 on your own is intimidating but Ben's course was exactly what I needed to get started. The emails built an incredible foundation with D3 and I'm now comfortable with the core concepts. I'm ready to start branching out and learning the API at a deeper level!</blockquote>
+        <p>— <a href="https://vanslaars.io/" class="dark-blue link underline hover-bg-lightest-blue">Andy Van Slaars</a></p>
       </div>
     </div>
   </div>
