--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -412,48 +412,57 @@
   <div class="center measure-wide f5 lh-copy ph4 ph0-ns">
     <h1 class="lh-title tc pv3">What subscribers are saying</h1>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/kai.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">This is a great set of tips for getting started with D3! The daily lessons encourage persistence and really prepare you to dive deeper into the library.</blockquote>
+        <p>&#8213; <a href="https://bl.ocks.org/syntagmatic" class="dark-blue link underline hover-bg-lightest-blue">Kai Chang</a>, Data Visualization Technologist, Stamen</p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/andrew.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">I really enjoyed this course. Each day’s email was just the right amount of content and the conversational format with inline examples is great.</blockquote>
-        <p>— <a href="https://www.linkedin.com/in/andrewgscheidle/" class="dark-blue link underline hover-bg-lightest-blue">Andrew Gscheidle</a></p>
+        <p>&#8213; <a href="https://www.linkedin.com/in/andrewgscheidle/" class="dark-blue link underline hover-bg-lightest-blue">Andrew Gscheidle</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/will.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">I've messed around with D3 in the past, and this is the first time it's really &quot;clicked&quot;. The emails teed up the next day's content and had me looking forward to it.</blockquote>
-        <p>— <a href="http://willbutton.co/" class="dark-blue link underline hover-bg-lightest-blue">Will Button</a></p>
+        <p>&#8213; <a href="http://willbutton.co/" class="dark-blue link underline hover-bg-lightest-blue">Will Button</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/jonathan.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's five-day D3 email course is so clear and well-written that I accidentally learned D3 just from proof reading it for him. Now I'm looking for places to use it in my own work!</blockquote>
-        <p>— <a href="http://expensiveproblem.com" class="dark-blue link underline hover-bg-lightest-blue">Jonathan Stark</a></p>
+        <p>&#8213; <a href="http://expensiveproblem.com" class="dark-blue link underline hover-bg-lightest-blue">Jonathan Stark</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/taylor.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's mini-course provides a great foundation for data viz. I'm not afraid of D3 anymore!</blockquote>
-        <p>— Taylor Bell</p>
+        <p>&#8213; Taylor Bell</p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/vanslaars.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Learning D3 on your own is intimidating but Ben's course was exactly what I needed to get started. The emails built an incredible foundation with D3 and I'm now comfortable with the core concepts. I'm ready to start branching out and learning the API at a deeper level!</blockquote>
-        <p>— <a href="https://vanslaars.io/" class="dark-blue link underline hover-bg-lightest-blue">Andy Van Slaars</a></p>
+        <p>&#8213; <a href="https://vanslaars.io/" class="dark-blue link underline hover-bg-lightest-blue">Andy Van Slaars</a></p>
       </div>
     </div>
   </div>
-  <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-ns">
-    <h1 class="lh-title tc mb0">Who's responsible for this?</h1>
-    <div class="flex flex-column items-center pv2 f4-ns">
-      <img src="headshots/ben.jpg" width="120" height="120" class="mv3 br-100" />
-      <div class="pb5">
-        <p>Ben Clinkinbeard is a web developer with nearly two decades of experience focused on D3, React, Node, and ES6+. In addition to professional consulting, Ben shares his knowledge through <a href="https://benclinkinbeard.com/" class="dark-blue link underline hover-bg-lightest-blue">blogging</a>, conference presentations, and <a href="https://egghead.io/instructors/ben-clinkinbeard" class="dark-blue link underline hover-bg-lightest-blue">video tutorials</a>.</p>
-        <p>To date, <span class="bg-lightest-blue">more than 12,700 HOURS</span> have been spent watching his lessons.</p>
+  <div class="bg-black-10">
+    <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-ns">
+      <h1 class="lh-title tc mb0">Who's responsible for this?</h1>
+      <div class="flex flex-column items-center pv2 f4-ns">
+        <img src="headshots/ben.jpg" width="120" height="120" class="mv3 br-100" />
+        <div class="pb5">
+          <p>Ben Clinkinbeard is a web developer with nearly two decades of experience focused on D3, React, Node, and ES6+. In addition to professional consulting, Ben shares his knowledge through <a href="https://benclinkinbeard.com/" class="dark-blue link underline hover-bg-lightest-blue">blogging</a>, conference presentations, and <a href="https://egghead.io/instructors/ben-clinkinbeard" class="dark-blue link underline hover-bg-lightest-blue">video tutorials</a>.</p>
+          <p>To date, <span class="bg-lightest-blue">more than 12,700 HOURS</span> have been spent watching his lessons.</p>
+        </div>
       </div>
     </div>
   </div>
