Add description and audience copy

--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -392,7 +392,7 @@
 <body>
   <div class="vh-50 vh-75-ns dt w-100 tc bg-dark-gray white cover" style="background:url(bg.jpg) no-repeat center;">
     <div class="dtc v-mid">
-      <h1 class="f1 f-headline-l fw1 white ma0 ttu pt3 pt0-ns">Learn D3.js in 5 Days</h1>
+      <h1 class="f1 f-headline-l fw1 white ma0 ttu pt3 ph3 pt0-ns">Learn D3.js in 5 Days</h1>
       <h2 class="f3 fw1 white-80">Daily lessons delivered straight to your inbox</h2>
       <div class="pa4-ns pb4">
         <form class="w-100 center" action="https://www.getdrip.com/forms/64356965/submissions" method="post" data-drip-embedded-form="64356965">
@@ -409,8 +409,22 @@
       </div>
     </div>
   </div>
-  <div class="center measure-wide f5 lh-copy ph4 ph0-ns">
-    <h1 class="lh-title tc pv3">What subscribers are saying</h1>
+  <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-l">
+    <h1 class="lh-title tc mb0">What you'll receive</h1>
+    <div class="flex flex-column items-center pv2 f4-ns">
+      <p>A concise, practical lesson delivered via email for five consecutive weekdays. Each lesson is short and to the point (around 1000 words) and packed with information. The lessons provide strong foundational knowledge of core D3 concepts, preparing you for further exploration and mastery.</p>
+    </div>
+  </div>
+  <div class="center measure-wide f5 lh-copy ph4 ph0-l">
+    <h1 class="lh-title tc mb0 dn db-ns">Who is the intended audience?</h1>
+    <h1 class="lh-title tc mb0 dn-ns">Who is this for?</h1>
+    <div class="flex flex-column items-center pv2 f4-ns">
+      <p>Absolutely no D3 experience is necessary, but the lessons do assume a basic understanding of HTML, CSS, and JavaScript. If you're a web developer looking to add data visualization to your skillset this course is perfect for you!</p>
+    </div>
+  </div>
+  <div class="center measure-wide f5 lh-copy ph4 ph0-l">
+    <h1 class="lh-title tc pv3 dn db-ns">What subscribers are saying</h1>
+    <h1 class="lh-title tc pv3 dn-ns">What people think</h1>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/kai.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
@@ -455,8 +469,8 @@
     </div>
   </div>
   <div class="bg-black-10">
-    <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-ns">
-      <h1 class="lh-title tc mb0">Who's responsible for this?</h1>
+    <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-l">
+      <h1 class="lh-title tc mb0">Who created this?</h1>
       <div class="flex flex-column items-center pv2 f4-ns">
         <img src="headshots/ben.jpg" width="120" height="120" class="mv3 br-100" />
         <div class="pb5">
