Matthew Conlen testimonial

--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -433,6 +433,13 @@
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/matthew.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">Ben's D3 in 5 Days is a great introduction to the fundamentals of D3 and building data visualization for the web. The digestible lessons help to demystify common D3 patterns and build a solid foundation for learning more.</blockquote>
+        <p>&#8213; <a href="http://www.mathisonian.com/" class="dark-blue link underline hover-bg-lightest-blue">Matthew Conlen</a>, Data Visualization, FiveThirtyEight</p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/andrew.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">I really enjoyed this course. Each day’s email was just the right amount of content and the conversational format with inline examples is great.</blockquote>
