--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -426,49 +426,56 @@
     <h1 class="lh-title tc pv3 dn db-ns">What subscribers are saying</h1>
     <h1 class="lh-title tc pv3 dn-ns">What people think</h1>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/kai.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <img src="headshots/kai.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">This is a great set of tips for getting started with D3! The daily lessons encourage persistence and really prepare you to dive deeper into the library.</blockquote>
         <p>&#8213; <a href="https://bl.ocks.org/syntagmatic" class="dark-blue link underline hover-bg-lightest-blue">Kai Chang</a>, Data Visualization Technologist, Stamen</p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/matthew.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <img src="headshots/matthew.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's D3 in 5 Days is a great introduction to the fundamentals of D3 and building data visualization for the web. The digestible lessons help to demystify common D3 patterns and build a solid foundation for learning more.</blockquote>
         <p>&#8213; <a href="http://www.mathisonian.com/" class="dark-blue link underline hover-bg-lightest-blue">Matthew Conlen</a>, Data Visualization, FiveThirtyEight</p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/andrew.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <img src="headshots/loren.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">If you want to learn D3, I cannot recommend Ben&apos;s newsletter highly enough. Sign up!</blockquote>
+        <p>&#8213; <a href="https://lorenstewart.me" class="dark-blue link underline hover-bg-lightest-blue">Loren Stewart</a></p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/andrew.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">I really enjoyed this course. Each day’s email was just the right amount of content and the conversational format with inline examples is great.</blockquote>
         <p>&#8213; <a href="https://www.linkedin.com/in/andrewgscheidle/" class="dark-blue link underline hover-bg-lightest-blue">Andrew Gscheidle</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/will.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <img src="headshots/will.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">I've messed around with D3 in the past, and this is the first time it's really &quot;clicked&quot;. The emails teed up the next day's content and had me looking forward to it.</blockquote>
         <p>&#8213; <a href="http://willbutton.co/" class="dark-blue link underline hover-bg-lightest-blue">Will Button</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/jonathan.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <img src="headshots/jonathan.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's five-day D3 email course is so clear and well-written that I accidentally learned D3 just from proof reading it for him. Now I'm looking for places to use it in my own work!</blockquote>
         <p>&#8213; <a href="http://expensiveproblem.com" class="dark-blue link underline hover-bg-lightest-blue">Jonathan Stark</a></p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/taylor.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <img src="headshots/taylor.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's mini-course provides a great foundation for data viz. I'm not afraid of D3 anymore!</blockquote>
         <p>&#8213; Taylor Bell</p>
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
-      <img src="headshots/vanslaars.jpg" width="120" height="120" class="fl-ns br-100 mb2" />
+      <img src="headshots/vanslaars.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Learning D3 on your own is intimidating but Ben's course was exactly what I needed to get started. The emails built an incredible foundation with D3 and I'm now comfortable with the core concepts. I'm ready to start branching out and learning the API at a deeper level!</blockquote>
         <p>&#8213; <a href="https://vanslaars.io/" class="dark-blue link underline hover-bg-lightest-blue">Andy Van Slaars</a></p>
