--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -394,7 +394,7 @@
     <div class="dtc v-mid">
       <h1 class="f1 f-headline-l fw1 white ma0 ttu pt3 ph3 pt0-ns">Learn D3.js in 5 Days</h1>
       <h2 class="f3 fw1 white-80">Daily lessons delivered straight to your inbox</h2>
-      <div class="pa4-ns pb4">
+      <div id="form-container" class="pa4-ns pb4">
         <form class="w-100 center" action="https://www.getdrip.com/forms/64356965/submissions" method="post" data-drip-embedded-form="64356965">
           <fieldset class="cf bn ma0 pa0">
             <div class="mw6 center">
@@ -495,8 +495,12 @@
     </div>
   </div>
   <script>
-    if (location.search) {
+    if (location.search.startsWith('?e=')) {
       document.getElementById('email-address').value = location.search.substr(3);
+    }
+    if (location.search === '?confirmed') {
+      var fc = document.getElementById('form-container');
+      fc.parentNode.removeChild(fc);
     }
   </script>
 </body>
