--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -468,6 +468,13 @@
       </div>
     </div>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/lukas.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">Being a great teacher requires a deep sense of empathy to meet a new student where they are. For years, I have admired Ben's commitment to helping students cross the chasm between awareness and doing, and this mini-course is just another example of why he is one of the best in the space.</blockquote>
+        <p>&#8213; Lukas Ruebbelke</p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/taylor.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">Ben's mini-course provides a great foundation for data viz. I'm not afraid of D3 anymore!</blockquote>
