--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:description" content="A concise, practical lesson delivered via email for five consecutive weekdays. Each lesson is short, to the point, and packed with information." />
+  <meta name="twitter:title" content="Learn D3.js in 5 Days - d3in5days.com" />
+  <meta name="twitter:site" content="@bclinkinbeard" />
+  <meta name="twitter:image" content="https://i.imgur.com/d1opyrG.gifv" />
+  <meta name="twitter:creator" content="@bclinkinbeard" />
   <title>D3 in 5 Days</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
