--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -432,6 +432,13 @@
     <h1 class="lh-title tc pv3 dn db-ns">What subscribers are saying</h1>
     <h1 class="lh-title tc pv3 dn-ns">What people think</h1>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="headshots/josh.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">Just wanted to say thank you for the 5-day course. I've been meaning to get into D3 for ages and it's always tomorrow. Your course did the trick.</blockquote>
+        <p>&#8213; <a href="https://twitter.com/joshpitzalis" class="dark-blue link underline hover-bg-lightest-blue">Josh Pitzalis</a></p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="headshots/kai.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
         <blockquote class="ma0 i dark-gray">This is a great set of tips for getting started with D3! The daily lessons encourage persistence and really prepare you to dive deeper into the library.</blockquote>
