--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:site" content="@bclinkinbeard" />
   <meta name="twitter:image" content="https://i.imgur.com/Lwx4YqC.png" />
   <meta name="twitter:creator" content="@bclinkinbeard" />
-  <title>D3 in 5 Days</title>
+  <title>Learn D3.js in 5 Days</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
@@ -522,6 +522,20 @@
       var fc = document.getElementById('form-container');
       fc.parentNode.removeChild(fc);
     }
+  </script>
+  <!-- Drip -->
+  <script type="text/javascript">
+    var _dcq = _dcq || [];
+    var _dcs = _dcs || {};
+    _dcs.account = '4436187';
+
+    (function() {
+      var dc = document.createElement('script');
+      dc.type = 'text/javascript'; dc.async = true;
+      dc.src = '//tag.getdrip.com/4436187.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(dc, s);
+    })();
   </script>
 </body>
 
