--- a/static/testimonials/index.html
+++ b/static/testimonials/index.html
@@ -5,12 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:description" content="A concise, practical lesson delivered via email for five consecutive weekdays. Each lesson is short, to the point, and packed with information." />
-  <meta name="twitter:title" content="Learn D3.js in 5 Days - d3in5days.com" />
-  <meta name="twitter:site" content="@bclinkinbeard" />
-  <meta name="twitter:image" content="https://i.imgur.com/Lwx4YqC.png" />
-  <meta name="twitter:creator" content="@bclinkinbeard" />
   <title>Learn D3.js in 5 Days</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -396,41 +390,9 @@
 </head>
 
 <body>
-  <div class="vh-50 vh-75-ns dt w-100 tc bg-dark-gray white cover" style="background:url(bg.jpg) no-repeat center;">
-    <div class="dtc v-mid">
-      <h1 class="f1 f-headline-l fw1 white ma0 ttu pt3 ph3 pt0-ns">Learn D3.js in 5 Days</h1>
-      <h2 class="f3 fw1 white-80">Daily lessons delivered straight to your inbox</h2>
-      <div id="form-container" class="pa4-ns pb4">
-        <form class="w-100 center" action="https://www.getdrip.com/forms/64356965/submissions" method="post" data-drip-embedded-form="64356965">
-          <fieldset class="cf bn ma0 pa0">
-            <div class="mw6 center">
-              <input class="f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-70-l w-100 br2" placeholder="Your Email Address"
-                type="text" name="fields[email]" value="" id="email-address">
-              <input class="f6 mv2 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-30-l w-100 br2"
-                type="submit" value="Send Me Free Lessons!">
-            </div>
-          </fieldset>
-        </form>
-        <span class="f6 white-40">No spam, just content.</span>
-      </div>
-    </div>
-  </div>
-  <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-l">
-    <h1 class="lh-title tc mb0">What you'll receive</h1>
-    <div class="flex flex-column items-center pv2 f4-ns">
-      <p>A concise, practical lesson delivered via email for five consecutive weekdays. Each lesson is short and to the point (around 1000 words) and packed with information. The lessons provide strong foundational knowledge of core D3 concepts, preparing you for further exploration and mastery.</p>
-    </div>
-  </div>
   <div class="center measure-wide f5 lh-copy ph4 ph0-l">
-    <h1 class="lh-title tc mb0 dn db-ns">Who is the intended audience?</h1>
-    <h1 class="lh-title tc mb0 dn-ns">Who is this for?</h1>
-    <div class="flex flex-column items-center pv2 f4-ns">
-      <p>Absolutely no D3 experience is necessary, but the lessons do assume a basic understanding of HTML, CSS, and JavaScript. If you're a web developer looking to add data visualization to your skillset this course is perfect for you!</p>
-    </div>
-  </div>
-  <div class="center measure-wide f5 lh-copy ph4 ph0-l">
-    <h1 class="lh-title tc pv3 dn db-ns">What subscribers are saying</h1>
-    <h1 class="lh-title tc pv3 dn-ns">What people think</h1>
+    <h1 class="lh-title tc pv3 dn db-ns">What people are saying about D3 in 5 Days</h1>
+    <h1 class="lh-title tc pv3 dn-ns">D3 in 5 Days</h1>
     <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
       <img src="../headshots/pawel.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
       <div class="pl3">
@@ -509,27 +471,6 @@
       </div>
     </div>
   </div>
-  <div class="bg-black-10">
-    <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-l">
-      <h1 class="lh-title tc mb0">Who created this?</h1>
-      <div class="flex flex-column items-center pv2 f4-ns">
-        <img src="../headshots/ben.jpg" width="120" height="120" class="mv3 br-100" />
-        <div class="pb5">
-          <p>Ben Clinkinbeard is a web developer with nearly two decades of experience focused on D3, React, Node, and ES6+. In addition to professional consulting, Ben shares his knowledge through <a href="https://benclinkinbeard.com/posts/" class="dark-blue link underline hover-bg-lightest-blue">blogging</a>, conference presentations, and <a href="https://egghead.io/instructors/ben-clinkinbeard" class="dark-blue link underline hover-bg-lightest-blue">video tutorials</a>.</p>
-          <p>To date, <span class="bg-lightest-blue">more than 12,700 HOURS</span> have been spent watching his lessons.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script>
-    if (location.search.startsWith('?e=')) {
-      document.getElementById('email-address').value = location.search.substr(3);
-    }
-    if (location.search.startsWith('?confirmed')) {
-      var fc = document.getElementById('form-container');
-      fc.parentNode.removeChild(fc);
-    }
-  </script>
   <!-- Drip -->
   <script type="text/javascript">
     var _dcq = _dcq || [];
