--- a/static/testimonials/index.html
+++ b/static/testimonials/index.html
@@ -470,6 +470,28 @@
         <p>&#8213; <a href="https://vanslaars.io/" class="dark-blue link underline hover-bg-lightest-blue">Andy Van Slaars</a></p>
       </div>
     </div>
+    <h1 class="lh-title tc pv3">Miscellaneous</h1>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="../headshots/lorien.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">I took your @eggheadio course on building JS charts with D3. One of the best video courses I have ever taken. Excellent, clear instruction.</blockquote>
+        <p>&#8213; <a href="https://twitter.com/LorienMCS/status/910262671328428033">Lorien</a></p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="../headshots/olivier.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">I'm watching D3 lessons on @eggheadio by @bclinkinbeard & even if I've been using D3 for 2 years now, I'm still learning things. Impressive.</blockquote>
+        <p>&#8213; <a href="https://twitter.com/OCombe/status/801778488294379520">Olivier Combe</a></p>
+      </div>
+    </div>
+    <div class="flex flex-column items-center flex-row-ns items-start-ns f4-ns pb4">
+      <img src="../headshots/joseph.jpg" width="120" height="120" class="fl-ns br-100 mb2 ba b--black-10" />
+      <div class="pl3">
+        <blockquote class="ma0 i dark-gray">@bclinkinbeard Just finished the D3 v4 Egghead series and it may be the best video tutorial I have ever done. Thanks!</blockquote>
+        <p>&#8213; <a href="https://twitter.com/JosephCapezzuto/status/818932176146362368">Joseph Capezzuto</a></p>
+      </div>
+    </div>
   </div>
   <!-- Drip -->
   <script type="text/javascript">
