--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:description" content="A concise, practical lesson delivered via email for five consecutive weekdays. Each lesson is short, to the point, and packed with information." />
-  <meta name="twitter:title" content="Learn D3.js in 5 Days - d3in5days.com" />
+  <meta name="twitter:description" content="Learn to create charts that look great anywhere using SVG and D3.js" />
+  <meta name="twitter:title" content="D3 + SVG: How to Create Flawless Charts for Any Screen" />
   <meta name="twitter:site" content="@bclinkinbeard" />
-  <meta name="twitter:image" content="https://i.imgur.com/Lwx4YqC.png" />
+  <meta name="twitter:image" content="https://imgur.com/meMiVpd.png" />
   <meta name="twitter:creator" content="@bclinkinbeard" />
-  <title>Learn D3.js in 5 Days</title>
+  <title>D3 + SVG: How to Create Flawless Charts for Any Screen</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
