Real buy buttons and some text

--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -110,9 +110,11 @@
           <li>D3 in 5 Days PDF Booklet</li>
         </ul>
         <div class="m-6 mx-auto w-2/3">
-          <button class="bg-green hover:bg-green-light text-white font-bold w-5/6 py-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
-            Purchase
-          </button>
+          <a href="https://transactions.sendowl.com/packages/60051/56620417/purchase" rel="nofollow">
+            <button class="bg-green hover:bg-green-light text-white font-bold w-5/6 py-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
+              Purchase
+            </button>
+          </a>
         </div>
       </div>
 
@@ -140,9 +142,11 @@
           <li class="font-bold">$500+ in 3rd party discounts</li>
         </ul>
         <div class="m-6 mx-auto w-2/3">
-          <button class="bg-green hover:bg-green-light text-white font-bold w-5/6 py-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
-            Purchase
-          </button>
+          <a href="https://transactions.sendowl.com/packages/59871/50315877/purchase" rel="nofollow">
+            <button class="bg-green hover:bg-green-light text-white font-bold w-5/6 py-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
+              Purchase
+            </button>
+          </a>
         </div>
       </div>
 
@@ -159,9 +163,11 @@
           <li class="font-bold">Live 1-on-1 Call</li>
         </ul>
         <div class="m-6 mx-auto w-2/3">
-          <button class="bg-green hover:bg-green-light text-white font-bold w-5/6 py-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
-            Purchase
-          </button>
+          <a href="https://transactions.sendowl.com/packages/59872/0D45307E/purchase" rel="nofollow">
+            <button class="bg-green hover:bg-green-light text-white font-bold w-5/6 py-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
+              Purchase
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -187,7 +193,7 @@
 
     <h3>How is the book structured?</h3>
     This book is basically divided into 2 parts. The first 4 chapters cover the basics of SVG itself, and the last 6 chapters
-        introduce D3 APIs and techniques for creating SVG charts programmatically.
+    introduce D3 APIs and techniques for creating SVG charts programmatically.
 
     <ol>
       <li>SVG Elements</li>
@@ -203,17 +209,15 @@
     </ol>
 
     The book is chock full of code examples, including several CodePen Pens. The book provides ample context and explanation
-      for each one, but if you&#39;d like to explore them on your own they&#39;re
-      <a href='https://codepen.io/collection/ee6b5121a5a3df356c72e11b80094c02/'>available as a collection here</a>.
-
-      If you purchase a bundle, you also receive 26 video lessons, totaling more than 2.5 hours! Nine of those
-      lessons directly correspond to the content in this book and are referenced in-place within the text. (These videos
-      are also available to
-      <a href='https://egghead.io/courses/build-interactive-javascript-charts-with-d3-v4'>Egghead PRO subscribers</a>.)
+    for each one, but if you&#39;d like to explore them on your own they&#39;re
+    <a href='https://codepen.io/collection/ee6b5121a5a3df356c72e11b80094c02/'>available as a collection here</a>. If you purchase a bundle, you also receive 26 video lessons, totaling more than 2.5
+    hours! Nine of those lessons directly correspond to the content in this book and are referenced in-place within the text.
+    (These videos are also available to
+    <a href='https://egghead.io/courses/build-interactive-javascript-charts-with-d3-v4'>Egghead PRO subscribers</a>.)
 
     <h2 class="text-center pt-6">Uniqueness</h2>
     <p>Doing data viz since 2009</p>
-    <p>Have taught thousands of devs for thousands of hours</p>
+    <p>To date 25,814 devs have spent 18,259 hours watching my video lessons.</p>
     <p>Available for questions</p>
     <p>Obsessed with clarity and brevity</p>
 
@@ -222,12 +226,13 @@
     <p>Guarantee</p>
 
     <h2 class="text-center pt-6">Urgency</h2>
-    <p>Limited supply coupons?</p>
-    <p>Launch price</p>
-    <p>Limited availability for 1-on-1 (2 spots left?)</p>
+    <p>Launch pricing is not permanent.</p>
+    <p>The are a limited number of 1-on-1 calls available. There are currently
+      <strong>4 spots</strong> available.</p>
 
   </div>
 
+  <script type="text/javascript" src="https://transactions.sendowl.com/assets/sendowl.js"></script>
 </body>
 
 </html>
