Wide pricing table

--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -100,8 +100,8 @@
     <p>Live call</p>
 
     <!-- Begin Pricing Table -->
-    <div class="flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6">
-      <div class="z-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
+    <div class="flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6" style="width: 80vw; margin-left: calc(-1 * ((80vw - 100%) / 2));">
+      <div class="z-0 mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
         <h2 class="py-4 shadow bg-blue-dark text-white uppercase">eBook</h2>
         <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$39</div>
         <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
@@ -118,9 +118,9 @@
         </div>
       </div>
 
-      <div class="z-20 mt-4 pb-3 shadow-md lg:w-2/5 text-slate text-center">
+      <div class="z-20 mt-4 lg:mt-0 pb-3 shadow-md lg:w-2/5 text-slate text-center">
         <div class="py-8 flex-col items-center shadow-lg bg-blue-dark text-white uppercase border-white">
-          <ul class="list-reset leading-normal text-left inline-block">
+          <ul class="list-reset leading-none text-left inline-block">
             <li>
               <h2 class="text-center">+ Video Course</h2>
             </li>
@@ -150,7 +150,7 @@
         </div>
       </div>
 
-      <div class="z-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
+      <div class="z-0 mt-4 lg:mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
         <h2 class="py-4 shadow bg-blue-dark text-white uppercase">+ 1-on-1 Call</h2>
         <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$299</div>
         <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
