--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -188,7 +188,7 @@
             <li class="text-grey-darker font-thin">D3 in 5 Days PDF Booklet</li>
             <li class="font-bold">Video Course (2.5hrs)</li>
             <li class="font-bold">3 Months of Office Hours</li>
-            <li class="font-bold">30% off Wes Bos courses</li>
+            <li class="font-bold">25% off Wes Bos courses</li>
             <li class="font-bold">30% off Egghead PRO</li>
             <li class="font-bold">Hundreds more in discounts</li>
           </ul>
@@ -210,7 +210,7 @@
             <li class="text-grey-darker font-thin">D3 in 5 Days PDF Booklet</li>
             <li class="text-grey-darker font-thin">Video Course (2.5hrs)</li>
             <li class="text-grey-darker font-thin">3 Months of Office Hours</li>
-            <li class="text-grey-darker font-thin">30% off Wes Bos courses</li>
+            <li class="text-grey-darker font-thin">25% off Wes Bos courses</li>
             <li class="text-grey-darker font-thin">30% off Egghead PRO</li>
             <li class="text-grey-darker font-thin">Hundreds more in discounts</li>
             <li class="font-bold">Live 1-on-1 Call</li>
@@ -237,9 +237,28 @@
       <h2 class="pt-8 pb-1 text-3xl">
         What do readers say?
       </h2>
-      <p class="pb-4">
-        Testimonials
-      </p>
+      <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
+        <img src="../headshots/nicholas.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <blockquote class="italic text-grey-darker font-light">
+            “Joyfully educational” is rare in a tech book but it’s how I would describe D3 + SVG. I love the writing style and spending extra time with the code examples is very helpful for all the new concepts and knowledge I’m gaining. Highly recommended!
+          </blockquote>
+          <p class="py-4">
+            &#8213; <a href="http://keystroke.fun/">Nicholas Gentile</a>, Software Developer, Money.Net
+          </p>
+        </div>
+      </div>
+      <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
+        <img src="../headshots/sundar.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <blockquote class="italic text-grey-darker font-light">
+            Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. You cannot go wrong with it.
+          </blockquote>
+          <p class="py-4">
+            &#8213; <a href="http://eesur.surge.sh">Sundar Singh</a>, Data Visualisation Developer,  Times Higher Education
+          </p>
+        </div>
+      </div>
 
       <!-- OVERCOME OBJECTIONS -->
       <h2 class="pt-8 pb-1 text-3xl">
@@ -299,9 +318,12 @@
       </p>
 
       <!-- UNIQUENESS -->
-      <h2 class="pt-8 pb-1 text-3xl">
-        Proven Experience
+      <h2 class="pt-8 pb-1 text-3xl text-center">
+        A Trusted Instructor
       </h2>
+      <p class="pb-4 text-center">
+        <img class="rounded-full" src="../headshots/ben.jpg" alt="Ben Clinkinbeard">
+      </p>
       <p class="pb-4">
         I'm Ben Clinkinbeard, a developer and instructor with more than 15 years experience. I've been doing data visualization since 2009 and using D3.js since 2011.
       </p>
@@ -350,7 +372,7 @@
             <li class="text-grey-darker font-thin">D3 in 5 Days PDF Booklet</li>
             <li class="font-bold">Video Course (2.5hrs)</li>
             <li class="font-bold">3 Months of Office Hours</li>
-            <li class="font-bold">30% off Wes Bos courses</li>
+            <li class="font-bold">25% off Wes Bos courses</li>
             <li class="font-bold">30% off Egghead PRO</li>
             <li class="font-bold">Hundreds more in discounts</li>
           </ul>
@@ -372,7 +394,7 @@
             <li class="text-grey-darker font-thin">D3 in 5 Days PDF Booklet</li>
             <li class="text-grey-darker font-thin">Video Course (2.5hrs)</li>
             <li class="text-grey-darker font-thin">3 Months of Office Hours</li>
-            <li class="text-grey-darker font-thin">30% off Wes Bos courses</li>
+            <li class="text-grey-darker font-thin">25% off Wes Bos courses</li>
             <li class="text-grey-darker font-thin">30% off Egghead PRO</li>
             <li class="text-grey-darker font-thin">Hundreds more in discounts</li>
             <li class="font-bold">Live 1-on-1 Call</li>
@@ -397,7 +419,7 @@
 
       <!-- URGENCY -->
       <h2 class="pt-8 pb-1 text-3xl">
-        Control your career
+        Take control of your career
       </h2>
       <p class="pb-4">
         Upgrading your skillset puts you in the driver's seat. It increases your market value. It keeps you from being at the mercy of off-the-shelf code that is bound to disappoint.
