--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -14,6 +14,20 @@
   <title>D3 + SVG: How to Create Flawless Charts for Any Screen</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Quicksand" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    .pricing {
+      width: 100vw;
+      margin-left: calc(-1 * ((100vw - 100%) / 2));
+    }
+
+    /* sm breakpoint */
+    @media (min-width: 576px) {
+      .pricing {
+        width: 80vw;
+        margin-left: calc(-1 * ((80vw - 100%) / 2));
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -155,7 +169,7 @@
 
       <!-- CTA #1 -->
       <!-- Begin Pricing Table -->
-      <div class="flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6 pt-8" style="width: 80vw; margin-left: calc(-1 * ((80vw - 100%) / 2));">
+      <div class="pricing flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6 pt-8">
         <div class="z-0 mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
           <h2 class="py-4 shadow bg-blue-dark text-white">Just the Book</h2>
           <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$39</div>
@@ -234,14 +248,15 @@
       <!-- End Pricing Table -->
 
       <!-- SOCIAL PROOF -->
-      <h2 class="pt-8 pb-1 text-3xl">
-        What do readers say?
+      <h2 class="pt-8 pb-6 text-3xl">
+        Does this stuff really work?
       </h2>
       <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/nicholas.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left">&quot;Highly recommended!&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
-            “Joyfully educational” is rare in a tech book but it’s how I would describe D3 + SVG. I love the writing style and spending extra time with the code examples is very helpful for all the new concepts and knowledge I’m gaining. Highly recommended!
+            “Joyfully educational” is rare in a tech book but it’s how I would describe D3 + SVG. I love the writing style and spending extra time with the code examples is very helpful for all the new concepts and knowledge I’m gaining. <span class="bg-yellow">Highly recommended!</span class="bg-yellow">
           </blockquote>
           <p class="py-4">
             &#8213; <a href="http://keystroke.fun/">Nicholas Gentile</a>, Software Developer, Money.Net
@@ -251,8 +266,9 @@
       <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/sundar.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left">&quot;You cannot go wrong with it.&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
-            Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. You cannot go wrong with it.
+            Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. <span class="bg-yellow">You cannot go wrong with it.</span>
           </blockquote>
           <p class="py-4">
             &#8213; <a href="http://eesur.surge.sh">Sundar Singh</a>, Data Visualisation Developer,  Times Higher Education
@@ -339,7 +355,7 @@
 
       <!-- CTA #2 -->
       <!-- Begin Pricing Table -->
-      <div class="flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6 pt-8" style="width: 80vw; margin-left: calc(-1 * ((80vw - 100%) / 2));">
+      <div class="pricing flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6 pt-8">
         <div class="z-0 mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
           <h2 class="py-4 shadow bg-blue-dark text-white">Just the Book</h2>
           <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$39</div>
