--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -79,6 +79,7 @@
       </p>
 
       <!-- DREAM -->
+      <a name="dream"></a>
       <h2 class="pt-8 pb-1 text-3xl">
         It doesn't have to be that stressful
       </h2>
@@ -131,6 +132,7 @@
       </p>
 
       <!-- FIX -->
+      <a name="fix"></a>
       <h2 class="pt-8 pb-1 text-3xl">
         Learning D3 doesn&#39;t have to be hard
       </h2>
@@ -169,6 +171,7 @@
 
       <!-- CTA #1 -->
       <!-- Begin Pricing Table -->
+      <a name="pricing"></a>
       <div class="pricing flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6 pt-8">
         <div class="z-0 mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
           <h2 class="py-4 shadow bg-blue-dark text-white">Just the Book</h2>
@@ -248,13 +251,14 @@
       <!-- End Pricing Table -->
 
       <!-- SOCIAL PROOF -->
+      <a name="testimonials"></a>
       <h2 class="pt-8 pb-6 text-3xl">
         Does this stuff really work?
       </h2>
       <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/nicholas.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
-          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left">&quot;Highly recommended!&quot;</h3>
+          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left md:pt-0">&quot;Highly recommended!&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
             “Joyfully educational” is rare in a tech book but it’s how I would describe D3 + SVG. I love the writing style and spending extra time with the code examples is very helpful for all the new concepts and knowledge I’m gaining. <span class="bg-yellow">Highly recommended!</span class="bg-yellow">
           </blockquote>
@@ -266,7 +270,7 @@
       <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/sundar.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
-          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left">&quot;You cannot go wrong with it.&quot;</h3>
+          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left md:pt-0">&quot;You cannot go wrong with it.&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
             Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. <span class="bg-yellow">You cannot go wrong with it.</span>
           </blockquote>
@@ -277,6 +281,7 @@
       </div>
 
       <!-- OVERCOME OBJECTIONS -->
+      <a name="objections"></a>
       <h2 class="pt-8 pb-1 text-3xl">
         The fastest path to D3 proficiency
       </h2>
@@ -334,6 +339,7 @@
       </p>
 
       <!-- UNIQUENESS -->
+      <a name="uniqueness"></a>
       <h2 class="pt-8 pb-1 text-3xl text-center">
         A Trusted Instructor
       </h2>
@@ -434,6 +440,7 @@
       <!-- End Pricing Table -->
 
       <!-- URGENCY -->
+      <a name="urgency"></a>
       <h2 class="pt-8 pb-1 text-3xl">
         Take control of your career
       </h2>
