Link to D3SVG from D35D

--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -433,8 +433,11 @@
   </div>
   <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-l">
     <h1 class="lh-title tc mb0">What you'll receive</h1>
-    <div class="flex flex-column items-center pv2 f4-ns">
+    <div class="flex flex-column pv2 f4-ns">
       <p>A concise, practical lesson delivered via email for five consecutive weekdays. Each lesson is short and to the point (around 1000 words) and packed with information. The lessons provide strong foundational knowledge of core D3 concepts, preparing you for further exploration and mastery.</p>
+      <p>Hate waiting?</p>
+      <p>Want all the lessons right away, plus a book and 20 extra CodePen examples?</p>
+     <p><a href="http://d3svg.com">D3 + SVG: How to Create Flawless Charts for Any Screen</a> is a book that picks up where D3 in 5 Days leaves off. You also get the full D3 in 5 Days course as a single PDF, meaning you can read the whole thing in an afternoon. You can even get a 2.5 hour video course, <em>Build Interactive JavaScript Charts with D3 v4</em>. <a href="http://d3svg.com">Click here to check it out!</a></p>
     </div>
   </div>
   <div class="center measure-wide f5 lh-copy ph4 ph0-l">
@@ -532,7 +535,9 @@
         <img src="../headshots/ben.jpg" width="120" height="120" class="mv3 br-100" />
         <div class="pb5">
           <p>Ben Clinkinbeard is a web developer with nearly two decades of experience focused on D3, React, Node, and ES6+. In addition to professional consulting, Ben shares his knowledge through <a href="https://benclinkinbeard.com/posts/" class="dark-blue link underline hover-bg-lightest-blue">blogging</a>, conference presentations, and <a href="https://egghead.io/instructors/ben-clinkinbeard" class="dark-blue link underline hover-bg-lightest-blue">video tutorials</a>.</p>
-          <p>To date, <span class="bg-lightest-blue">more than 12,700 HOURS</span> have been spent watching his lessons.</p>
+          <p>
+            Since 2014 <span class="bg-lightest-blue">more than 25,000 developers have spent over 18,000 hours watching his video lessons.</span>
+          </p>
         </div>
       </div>
     </div>
