--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -348,7 +348,7 @@
         I'm Ben Clinkinbeard, a developer and instructor with more than 15 years experience. I've been doing data visualization since 2009 and using D3.js since 2011.
       </p>
       <p class="pb-4">
-        In just the past four years, <span class="font-bold bg-purple-lighter px-1">over 25,000 developers have spent more than 18,000 hours watching my video lessons.</span> That doesn't happen with educational content that doesn't work.
+        Since 2014 <span class="font-bold bg-purple-lighter px-1">more than 25,000 developers have spent over 18,000 hours watching my video lessons.</span> That doesn't happen with educational content that doesn't work.
       </p>
       <p class="pb-4">
         Obsessed with clarity, brevity, and information density, you can be assured this material will not waste your time. You'll get the knowledge you need to be successful in the shortest time possible.
