--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -270,7 +270,19 @@
             Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. <span class="bg-yellow-light px-1">You cannot go wrong with it.</span>
           </blockquote>
           <p class="py-4">
-            &#8213; <a href="http://eesur.surge.sh">Sundar Singh</a>, Data Visualisation Developer,  Times Higher Education
+            &#8213; <a href="http://eesur.surge.sh">Sundar Singh</a>, Data Visualisation Developer, Times Higher Education
+          </p>
+        </div>
+      </div>
+      <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
+        <img src="../headshots/denise.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left md:pt-0">&quot;A fantastic introduction to SVG.&quot;</h3>
+          <blockquote class="italic text-grey-darker font-light">
+            D3 + SVG is <span class="bg-yellow-light px-1">a fantastic introduction to SVG.</span> It teaches you how to understand and create common D3 charts while adhering to established community conventions. If you’re just starting out this is a great resource.
+          </blockquote>
+          <p class="py-4">
+            &#8213; <a href="http://github.com/denisemauldin">Denise Mauldin</a>, Full Stack Software Engineer
           </p>
         </div>
       </div>
