Fix bullet padding and text highlighting

--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -218,7 +218,7 @@
           <h2 class="py-4 shadow bg-blue-dark text-white">Coaching Call</h2>
           <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$299</div>
           <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
-          <ul class="text-left inline-block mx-auto pl-4 leading-loose">
+          <ul class="text-left inline-block mx-auto pr-2 leading-loose">
             <li class="text-grey-darker font-thin">D3 + SVG eBook</li>
             <li class="text-grey-darker font-thin">D3 in 5 Days PDF Booklet</li>
             <li class="text-grey-darker font-thin">Video Course (2.5hrs)</li>
@@ -354,10 +354,10 @@
         <img class="rounded-full" src="../headshots/ben.jpg" alt="Ben Clinkinbeard">
       </p>
       <p class="pb-4">
-        I'm Ben Clinkinbeard, a developer and instructor with more than 15 years experience. I've been doing data visualization since 2009 and using D3.js since 2011.
+        I'm Ben Clinkinbeard, a developer and instructor with more than 15 years experience. I've been working with D3.js professionally since 2011.
       </p>
       <p class="pb-4">
-        Since 2014 <span class="font-bold bg-purple-lighter px-1">more than 25,000 developers have spent over 18,000 hours watching my video lessons.</span> That doesn't happen with educational content that doesn't work.
+        Since 2014 <span class="font-bold bg-purple-lighter px-1">more than 25,000 developers</span> have spent <span class="font-bold bg-purple-lighter px-1">over 18,000 hours watching</span> my video lessons. That doesn't happen with educational content that doesn't work.
       </p>
       <p class="pb-4">
         Obsessed with clarity, brevity, and information density, you can be assured this material will not waste your time. You'll get the knowledge you need to be successful in the shortest time possible.
@@ -417,7 +417,7 @@
           <h2 class="py-4 shadow bg-blue-dark text-white">Coaching Call</h2>
           <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$299</div>
           <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
-          <ul class="text-left inline-block mx-auto pl-4 leading-loose">
+          <ul class="text-left inline-block mx-auto pr-2 leading-loose">
             <li class="text-grey-darker font-thin">D3 + SVG eBook</li>
             <li class="text-grey-darker font-thin">D3 in 5 Days PDF Booklet</li>
             <li class="text-grey-darker font-thin">Video Course (2.5hrs)</li>
